Update unstucker-styles.css - fixed the box size

--- a/project-3_final-project/styles/unstucker-styles.css
+++ b/project-3_final-project/styles/unstucker-styles.css
@@ -31,7 +31,7 @@ h1 {
     scrollbar-color: rgb(16, 16, 255) rgba(255, 166, 0, 0);
     scrollbar-width: thin;
     padding: 0 25%;
-    height: 700px;
+    height: 650px;
     width: 50%;
     justify-self: center;
     margin-top: 30px;
